--- a/package.json
+++ b/package.json
@@ -1,32 +1,45 @@
 {
-  "name": "FairyMaiden.Api",
+  "name": "koa2_starter_ts",
   "version": "1.0.0",
   "main": "dist/server.js",
   "author": "lyh",
   "license": "MIT",
   "scripts": {
     "start": "tsc && node dist/server.js",
-    "serve": "nodemon -e ts -w ./src -x yarn watch:serve",
-    "watch:serve": "ts-node --inspect -- src/server.ts",
-    "lint": "tslint-config-prettier-check ./tslint.json",
-    "build": "tslint-config-prettier-check ./tslint.json && tsc"
+    "dev":"ts-node -T --files -r tsconfig-paths/register ./src/server.ts",
+    "dev:debug":"node --inspect -r ts-node/register -r tsconfig-paths/register ./src/server.ts",
+    "serve": "nodemon",
+    "serve:debug": "nodemon --config nodemon-debug.json",
+    "debug": "yarn serve:debug",
+    "lint": "prettier --write \"src/**/*.ts\"",
+    "build": "tsc -p tsconfig.build.json"
   },
   "dependencies": {
-    "koa": "^2.6.2",
+    "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
-    "opn": "^5.4.0"
+    "open": "^6.3.0"
   },
   "devDependencies": {
-    "@types/koa": "^2.0.47",
-    "@types/koa-bodyparser": "^4.2.1",
-    "@types/koa-router": "^7.0.35",
-    "@types/opn": "^5.1.0",
-    "nodemon": "^1.18.9",
-    "prettier": "^1.15.3",
-    "ts-node": "^7.0.1",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.17.0",
-    "typescript": "^3.2.2"
+    "@types/koa": "^2.0.48",
+    "@types/koa-bodyparser": "^4.3.0",
+    "@types/koa-router": "^7.0.40",
+    "lint-staged": "^8.2.0",
+    "nodemon": "^1.19.1",
+    "prettier": "^1.18.2",
+    "ts-node": "^8.2.0",
+    "tsconfig-paths": "^3.8.0",
+    "tslint": "^5.17.0",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.5.1"
+  },
+  "gitHooks": {
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx,vue}": [
+      "yarn lint",
+      "git add"
+    ]
   }
 }
