--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,21 +2,22 @@
   "compilerOptions": {
     "target": "ESNEXT",
     "module": "commonjs",
+    "declaration": true,
+    "removeComments": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata":true,
+    "noImplicitAny": true,
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "strictPropertyInitialization":false,
     "sourceMap": true,
     "outDir": "dist",
     "strict": true,
-    "noImplicitAny": true,
-    "moduleResolution": "node",
     "baseUrl": ".",
     "paths": {
-      "*": [
-        "node_modules/*",
-        "src/types/*"
-      ],
       "@/*": ["src/*"]
     },
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
+    "typeRoots" : ["./node_modules/@types", "./src/typings"], 
   },
   "include": [
     "src/**/*"
